2006-07-14  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* Update doxygen API reference.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-base-main.cc
	(run): Return rather than calling exit.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #378152.

	* Having a single exit point now means terminal settings are
	always restored correctly.

	* sbuild/sbuild-run-parts.cc: Use _exit rather than exit when
	terminating a child process when execve has failed.

	* sbuild/sbuild-session.cc: Use _exit rather than exit when
	terminating a child process when execve has failed.

	* schroot/schroot-releaselock-main.(cc|h): Add error_code enum and
	error typedef for sbuild::custom_error.  Throw error in place of
	exiting with EXIT_FAILURE.

	* schroot/schroot-main-base.(cc|h): Add error_code enum and error
	typedef for sbuild::custom_error.  Throw error in place of exiting
	with EXIT_FAILURE.  Don't ever exit successfully; return a success
	status.

	* schroot/schroot-base-main.cc (run): Don't catch "..."; it's
	handled by the main() stubs.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-directory.cc (setup_env): Remove.
	CHROOT_LOCATION is already set in the parent class.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.conf.5.in: Minor whitespace cleanup.

	* TODO: Remove completed item.

	* Updated British English translation.

	* Apply quoting style to all sources.

	* HACKING: Document quoting style for format strings.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* HACKING: Document how to build the printed documentation.

	* Makefile.am: Add ps and pdf phony targets.

	* doc/Makefile.am: Add rules to make PS and PDF manuals.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* Update all documentation to use the style guidelines.

	* Makefile.am: Distribute HACKING.

	* HACKING: New file.  Document manual page style guidelines.
