@@ -2,10 +2,6 @@ schroot was originally written by Roger Leigh <rleigh@debian.org>.
 It would not be what it is today without the invaluable help of these
 people:
 
-Ben Hutchings <benh@debian.org>
-	Help with many C++ problems, especially the intricacies of
-	templates and other obscure and annoying language features.
-
 Andreas Bombe <aeb@debian.org>
 Steve Langasek <vorlon@debian.org>
 Martin Michlmayr <tbm@debian.org>
@@ -13,3 +9,10 @@ Adeodato Simó <adeodato@debian.org>
 	For many suggestions, feature requests and bug reports.
 	Without their destruction testing and help, schroot would not
 	have been pushed as far as it has.
+
+Ben Hutchings <benh@debian.org>
+	Help with many C++ problems, especially the intricacies of
+	templates and other obscure and annoying language features.
+
+Simon Richter <sjr@debian.org>
+	Help with PAM session handling.
